Anonymous | Login | 2021-01-26 06:01 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0026145 | Community | [OCCT] OCCT:Samples | public | 2015-04-24 16:27 | 2015-05-14 16:38 | ||||
Reporter | Pawel | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | crash | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 6.9.0 | ||||||||
Target Version | [OCCT] 6.9.0 | Fixed in Version | [OCCT] 6.9.0 | ||||||
Summary | 0026145: Geometry Sample crashes | ||||||||
Description | The Geometry sample crashes when trying to run three commands (see attached picture). Tried on OCCT 6.9.0 Beta 1 (precompiled binaries: opencascade-6.9.0-beta1.exe). | ||||||||
Steps To Reproduce | Build MFC samples Run Geometry sample Try to press buttons from attached screenshot in various order. | ||||||||
Tags | No tags attached. | ||||||||
Test case number | |||||||||
Attached Files | ![]() | ||||||||
![]() |
|
(0040583) git (administrator) 2015-05-05 19:42 |
Branch CR26145 has been created by ski. SHA-1: a9b5475ca5a0db83a238432072712ce60b73b3e0 Detailed log of new commits: Author: ski Date: Tue May 5 19:42:21 2015 +0300 0026145: Geometry Sample crashes Unacceptable usage of quantity coefficient was removed. |
(0040587) ski (developer) 2015-05-05 20:02 |
Reason of the crash was fixed. Also, displaying of vertices works fine now. Please, review. |
(0040590) abv (manager) 2015-05-05 20:59 |
No remarks, please integrate |
(0041113) git (administrator) 2015-05-14 16:38 |
Branch CR26145 has been deleted by inv. SHA-1: a9b5475ca5a0db83a238432072712ce60b73b3e0 |
![]() |
|||
occt: master 2f697f2f
Timestamp: 2015-05-05 16:42:21 Author: ski Committer: bugmaster [ Details ] [ Diff ] |
0026145: Geometry Sample crashes Unacceptable usage of quantity coefficient was removed. |
||
mod - samples/mfc/standard/01_Geometry/src/GeomSources.cpp | [ Diff ] [ File ] | ||
mod - samples/mfc/standard/01_Geometry/src/GeomSources.h | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2015-04-24 16:27 | Pawel | New Issue | |
2015-04-24 16:27 | Pawel | Assigned To | => bugmaster |
2015-04-24 16:27 | Pawel | File Added: crash.png | |
2015-04-30 10:11 | abv | Assigned To | bugmaster => ski |
2015-04-30 10:11 | abv | Status | new => assigned |
2015-05-05 19:42 | git | Note Added: 0040583 | |
2015-05-05 20:02 | ski | Note Added: 0040587 | |
2015-05-05 20:02 | ski | Assigned To | ski => abv |
2015-05-05 20:02 | ski | Status | assigned => resolved |
2015-05-05 20:02 | ski | Steps to Reproduce Updated | View Revisions |
2015-05-05 20:59 | abv | Note Added: 0040590 | |
2015-05-05 20:59 | abv | Assigned To | abv => bugmaster |
2015-05-05 20:59 | abv | Status | resolved => reviewed |
2015-05-06 12:01 | bugmaster | Status | reviewed => tested |
2015-05-07 11:18 | bugmaster | Changeset attached | => occt master 2f697f2f |
2015-05-07 11:18 | bugmaster | Status | tested => verified |
2015-05-07 11:18 | bugmaster | Resolution | open => fixed |
2015-05-14 15:28 | aiv | Status | verified => closed |
2015-05-14 15:30 | aiv | Fixed in Version | => 6.9.0 |
2015-05-14 16:38 | git | Note Added: 0041113 |
Copyright © 2000 - 2021 MantisBT Team |