0026145: Geometry Sample crashes

Unacceptable usage of quantity coefficient was removed.